Update Assignment 3  - Search + inject service to view

--- a/C#/FirstAppMVC/Views/Members/List.cshtml
+++ b/C#/FirstAppMVC/Views/Members/List.cshtml
@@ -4,6 +4,18 @@
     int index =0;
 }
 
+@using(Html.BeginForm("Search","Members",FormMethod.Post)) {
+    <div class="form-row align-items-center">
+    <div class="col-auto">
+      <input type="text" name="SearchString" class="form-control mb-2" id="Search" placeholder="Search By Name ">
+    </div>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-primary mb-2">Submit</button>
+    </div>
+  </div>
+}
+</hr>
+
 @Html.ActionLink("Create", "Create", "Members")
 </hr>
 
