--- a/C#/FirstAppMVC/Views/_ViewImports.cshtml
+++ b/C#/FirstAppMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using FirstAppMVC
 @using FirstAppMVC.Models
+@using Microsoft.AspNetCore.Http
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
