--- a/C#/FirstAppMVC/Views/Members/Delete.cshtml
+++ b/C#/FirstAppMVC/Views/Members/Delete.cshtml
@@ -13,8 +13,38 @@
 <h3>Phone : @Model.Phone</h3>
 <h3>Email : @Model.Email</h3>
 
-@using(Html.BeginForm("DeleteMember","Members",FormMethod.Post)) {
 
-    <input name="i" id="i" value="@(ViewBag.IndexDelete)" hidden="true" />
-    <input type="submit" class="btn btn-primary" value="Delete"/>
-}
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+    Delete
+</button>
+
+<!-- The Modal -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Delete Member</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                You wnat delete member ?
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                @using (Html.BeginForm("DeleteMember", "Members", FormMethod.Post))
+                {
+
+                    <input name="i" id="i" value="@(ViewBag.IndexDelete)" hidden="true" />
+                    <input type="submit" class="btn btn-danger" value="Delete" />
+                }
+            </div>
+
+        </div>
+    </div>
+</div>
