full assignment Web MVC

--- a/C#/FirstAppMVC/Views/Members/Details.cshtml
+++ b/C#/FirstAppMVC/Views/Members/Details.cshtml
@@ -11,3 +11,4 @@
 <h1>Birthday : @Model.Birthday</h1>
 <h1>Phone : @Model.Phone</h1>
 <h1>Email : @Model.Email</h1>
+<h1>BirthPlace : @Model.BirthPlace</h1>
