--- a/C#/FirstAppMVC/Views/Shared/_Layout.cshtml
+++ b/C#/FirstAppMVC/Views/Shared/_Layout.cshtml
@@ -28,16 +28,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="List">List</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LoginForm">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
-                        </li>
-                         @* @if (HttpContext.Session.GetString("Username")!=null)
-                        {
                         
-                        }  *@
+                        
+                          @if (Context.Session.GetString("Username")!=null)
+                        {
+                             <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+                             </li>
+                        }  else{
+                              <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LoginForm">Login</a>
+                              </li>
+                        }
                     </ul>
                 </div>
             </div>
